# wingman

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt  run.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-npm.yml  release-pypi.yml
config/: __init__.py  contacts.yaml.example  groups.yaml.example  personality.py  policies.yaml.example  registry.py  settings.py
node_listener/: .npmignore  README.md  package-lock.json  package.json
node_listener/src/: index.ts  ipc.ts  messageHandler.ts  socket.ts  types.d.ts
python_orchestrator/: __init__.py  ipc_handler.py  main.py  message_processor.py  process_manager.py
python_orchestrator/llm/: __init__.py  client.py
python_orchestrator/memory/: __init__.py
python_orchestrator/policy/: evaluator.py
python_orchestrator/safety/: __init__.py  cooldown.py  quiet_hours.py  triggers.py
python_orchestrator/transports/: __init__.py  whatsapp.py
python_orchestrator/transports/imessage/: db_listener.py  sender.py
scripts/: daemon.sh
src/wingman/: __init__.py  __main__.py
src/wingman/cli/: __init__.py  main.py  wizard.py
src/wingman/cli/commands/: __init__.py  auth.py  config.py  console.py  init.py  logs.py  start.py  status.py  stop.py  uninstall.py
src/wingman/cli/console/: __init__.py  app.py  command_registry.py  completer.py  parser.py  renderer.py
src/wingman/cli/console/commands/: __init__.py  bot.py  config.py  contacts.py  groups.py  help.py  history.py  logs.py  policies.py  send.py  stats.py
src/wingman/config/: __init__.py  paths.py  personality.py  registry.py  settings.py  yaml_writer.py
src/wingman/core/: __init__.py  agent.py  ipc_handler.py  message_processor.py  process_manager.py  rpc_client.py  rpc_server.py
src/wingman/core/llm/: __init__.py  client.py
src/wingman/core/memory/: __init__.py  context.py  models.py
src/wingman/core/policy/: __init__.py  evaluator.py
src/wingman/core/safety/: __init__.py  cooldown.py  quiet_hours.py  rate_limiter.py  triggers.py
src/wingman/core/transports/: __init__.py  base.py  whatsapp.py
src/wingman/core/transports/imessage/: __init__.py  db_listener.py  (+2 more)
src/wingman/daemon/: __init__.py  manager.py
src/wingman/installer/: __init__.py  node_installer.py
tests/: test_basic.py  test_command_registry.py  test_console_app.py  test_console_commands.py  test_console_parser.py  test_message_processor_pause.py  test_rpc.py  test_yaml_writer.py
